# PresalesAgent

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  KURULUM.md  app.py  install.bat  install.sh  karar_agaci_v12.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
config/: allowed_users.json  effort_params.json
projects/otonom_araç_2_20260308_171320/: project.json
projects/otonom_araç_2_20260308_171320/scope/: extracted_text.txt
projects/otonom_araç_2_20260308_171320/wbs/: v1.json  v2.json
projects/otonom_araç_uzaktan_izleme_ve__20260308_134202/: project.json  project_state.json
projects/otonom_araç_uzaktan_izleme_ve__20260308_134202/wbs/: v1.json
projects/sayım_projesi_20260310_103515/: project.json
projects/sayım_projesi_20260310_103515/scope/: extracted_text.txt
projects/sayım_projesi_20260310_103515/wbs/: v1.json
projects/zzz_20260310_145615/: project.json
projects/zzz_20260310_145615/wbs/: v1.json
projects/çevre_denetim_projesi_20260310_095259/: project.json
projects/çevre_denetim_projesi_20260310_095259/scope/: extracted_text.txt
projects/çevre_denetim_projesi_20260310_095259/wbs/: v1.json
src/: auth.py  categorizer.py  chat_agent.py  cli.py  csv_writer.py  effort_engine.py  effort_tables.py  llm_client.py  param_manager.py  pdf_reader.py  project_manager.py  project_manager_v2.py  quality_check.py  sidebar_v2.py  ui_theme.py  wbs_editor.py  wbs_generator.py
src/views/: __init__.py  admin_users.py  components.py  dashboard.py  login.py  params_view.py  project_detail.py  wizard.py
(+18 files in other folders)
