[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "presalesagent"
version = "1.1.0"
description = "Kurumsal yazılım projelerinin efor tahminini yapan AI destekli uygulama"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Zeynep Tunca"},
]

dependencies = [
    "PyMuPDF>=1.24.0",
    "anthropic>=0.84.0",
    "openai>=1.0.0",
    "streamlit>=1.40.0",
    "openpyxl>=3.1.0",
    "json-repair>=0.30.0",
]

[project.scripts]
presalesagent = "src.cli:main"

[tool.setuptools.packages.find]
include = ["src*", "config*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.toml", "*.md"]
